// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with children and render should return null if when equals false 1`] = `null`;

exports[`with children and render should return null if when equals false 2`] = `null`;

exports[`with children and render should return null if when equals false 3`] = `null`;

exports[`with children and render should return null if when equals false 4`] = `null`;

exports[`with children and render should return primary content from children and ignore render if when equals true 1`] = `
<div>
  children
</div>
`;

exports[`with children and render should return primary content from children and ignore render if when equals true 2`] = `
<div>
  children
</div>
`;

exports[`with children and render should return primary content from children and ignore render if when equals true 3`] = `
<div>
  children
</div>
`;

exports[`with children and render should return primary content from children and ignore render if when equals true 4`] = `
<div>
  children
</div>
`;

exports[`with children should return null if when equals false 1`] = `null`;

exports[`with children should return null if when equals false 2`] = `null`;

exports[`with children should return null if when equals false 3`] = `null`;

exports[`with children should return null if when equals false 4`] = `null`;

exports[`with children should return primary content from children if when equals true 1`] = `
<div>
  render me
</div>
`;

exports[`with children should return primary content from children if when equals true 2`] = `
<div>
  render me
</div>
`;

exports[`with children should return primary content from children if when equals true 3`] = `
<div>
  render me
</div>
`;

exports[`with children should return primary content from children if when equals true 4`] = `
<div>
  render me
</div>
`;

exports[`with render should not evaluate render if when is undefined 1`] = `null`;

exports[`with render should not evaluate render if when is undefined 2`] = `null`;

exports[`with render should not evaluate render if when is undefined 3`] = `null`;

exports[`with render should not evaluate render if when is undefined 4`] = `null`;

exports[`with render should return null if when equals false 1`] = `null`;

exports[`with render should return null if when equals false 2`] = `null`;

exports[`with render should return null if when equals false 3`] = `null`;

exports[`with render should return null if when equals false 4`] = `null`;

exports[`with render should return primary content from render if when equals true 1`] = `
<div>
  render me
</div>
`;

exports[`with render should return primary content from render if when equals true 2`] = `
<div>
  render me
</div>
`;

exports[`with render should return primary content from render if when equals true 3`] = `
<div>
  render me
</div>
`;

exports[`with render should return primary content from render if when equals true 4`] = `
<div>
  render me
</div>
`;

exports[`without children and render should return null 1`] = `null`;

exports[`without children and render should return null 2`] = `null`;

exports[`without children and render should return null 3`] = `null`;

exports[`without children and render should return null 4`] = `null`;
